[project]
name = "hello-openai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KinzaaSheikh", email = "kinzasheikhsiddiqui@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.400",
]

[project.scripts]
openai-agent = "hello_openai_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
